projeto1-va-lexical-pascal/parser.output
Terminals unused in grammar

    OR
    AND
    LPAREN
    RPAREN
    EQ
    NEQ


State 45 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Header Block DOT

    2 Header: PROGRAM ID SEMICOLON
    3       | PROGRAM ID SEMICOLON VAR ListVar SEMICOLON
    4       | PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON

    5 ListVar: ID COLON Type
    6        | ListVar COMMA ID COLON Type

    7 Type: INTEGER
    8     | REAL

    9 Block: BEGIN END
   10      | BEGIN StmtList END

   11 StmtList: Stmt
   12         | StmtList SEMICOLON Stmt

   13 Stmt: ID ASSIGNOP Expr
   14     | IF Expr THEN Stmt
   15     | IF Expr THEN Stmt ELSE Stmt
   16     | WHILE Expr DO Stmt
   17     | Block

   18 Expr: ID
   19     | NUM_INT
   20     | NUM_REAL
   21     | Expr RELOP Expr
   22     | Expr ADDOP Expr
   23     | Expr MULOP Expr
   24     | Expr DIV Expr
   25     | Expr MOD Expr
   26     | NOT Expr
   27     | '(' Expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 27
    ')' (41) 27
    error (256)
    PROGRAM (258) 2 3 4
    VAR (259) 3 4
    INTEGER (260) 7
    REAL (261) 8
    PROCEDURE (262) 4
    BEGIN (263) 9 10
    END (264) 9 10
    IF (265) 14 15
    THEN (266) 14 15
    ELSE (267) 15
    WHILE (268) 16
    DO (269) 16
    OR (270)
    AND (271)
    NOT (272) 26
    DIV (273) 24
    MOD (274) 25
    ID <string> (275) 2 3 4 5 6 13 18
    NUM_INT <intval> (276) 19
    NUM_REAL <realval> (277) 20
    RELOP <string> (278) 21
    ADDOP <string> (279) 22
    MULOP <string> (280) 23
    ASSIGNOP <string> (281) 13
    DOT <string> (282) 1
    COLON <string> (283) 5 6
    SEMICOLON <string> (284) 2 3 4 12
    COMMA <string> (285) 6
    LPAREN <string> (286)
    RPAREN <string> (287)
    EQ (288)
    NEQ (289)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Program (38)
        on left: 1
        on right: 0
    Header (39)
        on left: 2 3 4
        on right: 1
    ListVar (40)
        on left: 5 6
        on right: 3 4 6
    Type <type> (41)
        on left: 7 8
        on right: 5 6
    Block (42)
        on left: 9 10
        on right: 1 4 17
    StmtList (43)
        on left: 11 12
        on right: 10 12
    Stmt (44)
        on left: 13 14 15 16 17
        on right: 11 12 14 15 16
    Expr (45)
        on left: 18 19 20 21 22 23 24 25 26 27
        on right: 13 14 15 16 21 22 23 24 25 26 27


State 0

    0 $accept: . Program $end

    PROGRAM  shift, and go to state 1

    Program  go to state 2
    Header   go to state 3


State 1

    2 Header: PROGRAM . ID SEMICOLON
    3       | PROGRAM . ID SEMICOLON VAR ListVar SEMICOLON
    4       | PROGRAM . ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: Header . Block DOT

    BEGIN  shift, and go to state 6

    Block  go to state 7


State 4

    2 Header: PROGRAM ID . SEMICOLON
    3       | PROGRAM ID . SEMICOLON VAR ListVar SEMICOLON
    4       | PROGRAM ID . SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON

    SEMICOLON  shift, and go to state 8


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    9 Block: BEGIN . END
   10      | BEGIN . StmtList END

    BEGIN  shift, and go to state 6
    END    shift, and go to state 9
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11
    ID     shift, and go to state 12

    Block     go to state 13
    StmtList  go to state 14
    Stmt      go to state 15


State 7

    1 Program: Header Block . DOT

    DOT  shift, and go to state 16


State 8

    2 Header: PROGRAM ID SEMICOLON .
    3       | PROGRAM ID SEMICOLON . VAR ListVar SEMICOLON
    4       | PROGRAM ID SEMICOLON . VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON

    VAR  shift, and go to state 17

    $default  reduce using rule 2 (Header)


State 9

    9 Block: BEGIN END .

    $default  reduce using rule 9 (Block)


State 10

   14 Stmt: IF . Expr THEN Stmt
   15     | IF . Expr THEN Stmt ELSE Stmt

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 23


State 11

   16 Stmt: WHILE . Expr DO Stmt

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 24


State 12

   13 Stmt: ID . ASSIGNOP Expr

    ASSIGNOP  shift, and go to state 25


State 13

   17 Stmt: Block .

    $default  reduce using rule 17 (Stmt)


State 14

   10 Block: BEGIN StmtList . END
   12 StmtList: StmtList . SEMICOLON Stmt

    END        shift, and go to state 26
    SEMICOLON  shift, and go to state 27


State 15

   11 StmtList: Stmt .

    $default  reduce using rule 11 (StmtList)


State 16

    1 Program: Header Block DOT .

    $default  reduce using rule 1 (Program)


State 17

    3 Header: PROGRAM ID SEMICOLON VAR . ListVar SEMICOLON
    4       | PROGRAM ID SEMICOLON VAR . ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON

    ID  shift, and go to state 28

    ListVar  go to state 29


State 18

   26 Expr: NOT . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 30


State 19

   18 Expr: ID .

    $default  reduce using rule 18 (Expr)


State 20

   19 Expr: NUM_INT .

    $default  reduce using rule 19 (Expr)


State 21

   20 Expr: NUM_REAL .

    $default  reduce using rule 20 (Expr)


State 22

   27 Expr: '(' . Expr ')'

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 31


State 23

   14 Stmt: IF Expr . THEN Stmt
   15     | IF Expr . THEN Stmt ELSE Stmt
   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    THEN   shift, and go to state 32
    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    RELOP  shift, and go to state 35
    ADDOP  shift, and go to state 36
    MULOP  shift, and go to state 37


State 24

   16 Stmt: WHILE Expr . DO Stmt
   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    DO     shift, and go to state 38
    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    RELOP  shift, and go to state 35
    ADDOP  shift, and go to state 36
    MULOP  shift, and go to state 37


State 25

   13 Stmt: ID ASSIGNOP . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 39


State 26

   10 Block: BEGIN StmtList END .

    $default  reduce using rule 10 (Block)


State 27

   12 StmtList: StmtList SEMICOLON . Stmt

    BEGIN  shift, and go to state 6
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11
    ID     shift, and go to state 12

    Block  go to state 13
    Stmt   go to state 40


State 28

    5 ListVar: ID . COLON Type

    COLON  shift, and go to state 41


State 29

    3 Header: PROGRAM ID SEMICOLON VAR ListVar . SEMICOLON
    4       | PROGRAM ID SEMICOLON VAR ListVar . SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON
    6 ListVar: ListVar . COMMA ID COLON Type

    SEMICOLON  shift, and go to state 42
    COMMA      shift, and go to state 43


State 30

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr
   26     | NOT Expr .

    $default  reduce using rule 26 (Expr)


State 31

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr
   27     | '(' Expr . ')'

    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    RELOP  shift, and go to state 35
    ADDOP  shift, and go to state 36
    MULOP  shift, and go to state 37
    ')'    shift, and go to state 44


State 32

   14 Stmt: IF Expr THEN . Stmt
   15     | IF Expr THEN . Stmt ELSE Stmt

    BEGIN  shift, and go to state 6
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11
    ID     shift, and go to state 12

    Block  go to state 13
    Stmt   go to state 45


State 33

   24 Expr: Expr DIV . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 46


State 34

   25 Expr: Expr MOD . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 47


State 35

   21 Expr: Expr RELOP . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 48


State 36

   22 Expr: Expr ADDOP . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 49


State 37

   23 Expr: Expr MULOP . Expr

    NOT       shift, and go to state 18
    ID        shift, and go to state 19
    NUM_INT   shift, and go to state 20
    NUM_REAL  shift, and go to state 21
    '('       shift, and go to state 22

    Expr  go to state 50


State 38

   16 Stmt: WHILE Expr DO . Stmt

    BEGIN  shift, and go to state 6
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11
    ID     shift, and go to state 12

    Block  go to state 13
    Stmt   go to state 51


State 39

   13 Stmt: ID ASSIGNOP Expr .
   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    RELOP  shift, and go to state 35
    ADDOP  shift, and go to state 36
    MULOP  shift, and go to state 37

    $default  reduce using rule 13 (Stmt)


State 40

   12 StmtList: StmtList SEMICOLON Stmt .

    $default  reduce using rule 12 (StmtList)


State 41

    5 ListVar: ID COLON . Type

    INTEGER  shift, and go to state 52
    REAL     shift, and go to state 53

    Type  go to state 54


State 42

    3 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON .
    4       | PROGRAM ID SEMICOLON VAR ListVar SEMICOLON . PROCEDURE ID SEMICOLON Block SEMICOLON

    PROCEDURE  shift, and go to state 55

    $default  reduce using rule 3 (Header)


State 43

    6 ListVar: ListVar COMMA . ID COLON Type

    ID  shift, and go to state 56


State 44

   27 Expr: '(' Expr ')' .

    $default  reduce using rule 27 (Expr)


State 45

   14 Stmt: IF Expr THEN Stmt .
   15     | IF Expr THEN Stmt . ELSE Stmt

    ELSE  shift, and go to state 57

    ELSE      [reduce using rule 14 (Stmt)]
    $default  reduce using rule 14 (Stmt)


State 46

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   24     | Expr DIV Expr .
   25     | Expr . MOD Expr

    $default  reduce using rule 24 (Expr)


State 47

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr
   25     | Expr MOD Expr .

    $default  reduce using rule 25 (Expr)


State 48

   21 Expr: Expr . RELOP Expr
   21     | Expr RELOP Expr .
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    ADDOP  shift, and go to state 36
    MULOP  shift, and go to state 37

    $default  reduce using rule 21 (Expr)


State 49

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   22     | Expr ADDOP Expr .
   23     | Expr . MULOP Expr
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    DIV    shift, and go to state 33
    MOD    shift, and go to state 34
    MULOP  shift, and go to state 37

    $default  reduce using rule 22 (Expr)


State 50

   21 Expr: Expr . RELOP Expr
   22     | Expr . ADDOP Expr
   23     | Expr . MULOP Expr
   23     | Expr MULOP Expr .
   24     | Expr . DIV Expr
   25     | Expr . MOD Expr

    $default  reduce using rule 23 (Expr)


State 51

   16 Stmt: WHILE Expr DO Stmt .

    $default  reduce using rule 16 (Stmt)


State 52

    7 Type: INTEGER .

    $default  reduce using rule 7 (Type)


State 53

    8 Type: REAL .

    $default  reduce using rule 8 (Type)


State 54

    5 ListVar: ID COLON Type .

    $default  reduce using rule 5 (ListVar)


State 55

    4 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE . ID SEMICOLON Block SEMICOLON

    ID  shift, and go to state 58


State 56

    6 ListVar: ListVar COMMA ID . COLON Type

    COLON  shift, and go to state 59


State 57

   15 Stmt: IF Expr THEN Stmt ELSE . Stmt

    BEGIN  shift, and go to state 6
    IF     shift, and go to state 10
    WHILE  shift, and go to state 11
    ID     shift, and go to state 12

    Block  go to state 13
    Stmt   go to state 60


State 58

    4 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID . SEMICOLON Block SEMICOLON

    SEMICOLON  shift, and go to state 61


State 59

    6 ListVar: ListVar COMMA ID COLON . Type

    INTEGER  shift, and go to state 52
    REAL     shift, and go to state 53

    Type  go to state 62


State 60

   15 Stmt: IF Expr THEN Stmt ELSE Stmt .

    $default  reduce using rule 15 (Stmt)


State 61

    4 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON . Block SEMICOLON

    BEGIN  shift, and go to state 6

    Block  go to state 63


State 62

    6 ListVar: ListVar COMMA ID COLON Type .

    $default  reduce using rule 6 (ListVar)


State 63

    4 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 64

    4 Header: PROGRAM ID SEMICOLON VAR ListVar SEMICOLON PROCEDURE ID SEMICOLON Block SEMICOLON .

    $default  reduce using rule 4 (Header)
